@@ -345,18 +345,17 @@ int libsmdev_handle_get_bus_type(
      uint8_t *bus_type,
      libsmdev_error_t **error );
 
-/* Retrieves an information value specified by the identifier
- * The strings are encoded in UTF-8
+/* Retrieves an UTF-8 encoded information value for the specific identifier
  * The value size should include the end of string character
  * Returns 1 if successful, 0 if value not present or -1 on error
  */
 LIBSMDEV_EXTERN \
-int libsmdev_handle_get_information_value(
+int libsmdev_handle_get_utf8_information_value(
      libsmdev_handle_t *handle,
-     const uint8_t *information_value_identifier,
-     size_t information_value_identifier_length,
-     uint8_t *information_value,
-     size_t information_value_size,
+     const uint8_t *identifier,
+     size_t identifier_size,
+     const uint8_t *utf8_string,
+     size_t utf8_string_size,
      libsmdev_error_t **error );
 
 /* Retrieves the number of sessions
@@ -438,6 +437,22 @@ int libsmdev_handle_set_error_flags(
 /* -------------------------------------------------------------------------
  * Meta data functions - deprecated
  * ------------------------------------------------------------------------- */
+
+/* Retrieves an UTF-8 encoded information value for the specific identifier
+ * The value size should include the end of string character
+ * Returns 1 if successful, 0 if value not present or -1 on error
+ *
+ * This function is deprecated use libsmdev_handle_get_utf8_information_value instead
+ */
+LIBSMDEV_DEPRECATED \
+LIBSMDEV_EXTERN \
+int libsmdev_handle_get_information_value(
+     libsmdev_handle_t *handle,
+     const uint8_t *information_value_identifier,
+     size_t information_value_identifier_length,
+     uint8_t *information_value,
+     size_t information_value_size,
+     libsmdev_error_t **error );
 
 /* Retrieves the amount of read/write error retries
  * Returns the 1 if succesful or -1 on error
