@@ -37,6 +37,15 @@ extern "C" {
 #if !defined( HAVE_LOCAL_LIBSMDEV )
 
 LIBSMDEV_EXTERN \
+int libsmdev_handle_get_information_value(
+     libsmdev_handle_t *handle,
+     const uint8_t *information_value_identifier,
+     size_t information_value_identifier_length,
+     uint8_t *information_value,
+     size_t information_value_size,
+     liberror_error_t **error );
+
+LIBSMDEV_EXTERN \
 int libsmdev_handle_get_amount_of_error_retries(
      libsmdev_handle_t *handle,
      uint8_t *amount_of_error_retries,
