@@ -1,4 +1,4 @@
-.Dd January 4, 2011
+.Dd January 6, 2011
 .Dt libsmdev 3
 .Os libsmdev
 .Sh NAME
@@ -97,7 +97,7 @@ Meta data functions
 .Ft int
 .Fn libsmdev_handle_get_bus_type "libsmdev_handle_t *handle, uint8_t *bus_type, libsmdev_error_t **error"
 .Ft int
-.Fn libsmdev_handle_get_information_value "libsmdev_handle_t *handle, const uint8_t *information_value_identifier, size_t information_value_identifier_length, uint8_t *information_value, size_t information_value_size, libsmdev_error_t **error"
+.Fn libsmdev_handle_get_utf8_information_value "libsmdev_handle_t *handle, const uint8_t *identifier, size_t identifier_length, uint8_t *utf8_string, size_t utf8_string_size, libsmdev_error_t **error"
 .Ft int
 .Fn libsmdev_handle_get_number_of_sessions "libsmdev_handle_t *handle, int *number_of_sessions, libsmdev_error_t **error"
 .Ft int
